examples/pos/lambdalifting/patternmatching.effekt
type Foo {
  Bar(n: Int);
  Baz()
}

def consume(f: Foo) = {
  val res = f match {
    case Bar(n) => n + 1
    case Baz() => 0
  }
  res * 2
}

def main() = {
  val x = consume(Bar(1));
  val y = consume(Baz());
  println(x + y)
}
