examples/neg/issue548c.effekt
type Box { Wrap[X](x: X) }

def main() = {
  val res = Wrap[Int](5) match { // ERROR escape
    case Wrap(y) =>
      val res = y;
      res
  };
  ()
}
